fix(user-menu): broken reposition when out of viewport

--- a/src/app/user-menu/user-menu.component.scss
+++ b/src/app/user-menu/user-menu.component.scss
@@ -29,7 +29,6 @@
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.16);
   border-radius: 6px;
   background-color: white;
-  position: absolute;
   white-space: nowrap;
   overflow: hidden;
 
